@@ -4,6 +4,10 @@ Changelog
 Version 1.0dev
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
+  Backwards incompatibilities
+
+- The compiler now expects an instantiated parser instance. [malthe]
+
   Features
 
 - Added ``symbol_mapping`` attribute to code streams such that
